Corrected activity_calculator.xml

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -14,6 +14,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginRight="5pt"
+            android:layout_marginEnd="5pt"
             android:id="@+id/input_field_one_edit_text"
             android:layout_width="match_parent"
             android:inputType="numberDecimal">
@@ -22,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="5pt"
+            android:layout_marginStart="5pt"
             android:id="@+id/input_field_two_edit_text"
             android:layout_width="match_parent"
             android:inputType="numberDecimal">
