--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -42,7 +42,8 @@
             android:layout_weight="1"
             android:text="+"
             android:textSize="8pt"
-            android:id="@+id/add_button">
+            android:id="@+id/add_button"
+            android:enabled="false">
         </Button>
         <Button
             android:layout_height="wrap_content"
@@ -50,7 +51,8 @@
             android:layout_weight="1"
             android:text="-"
             android:textSize="8pt"
-            android:id="@+id/dif_button">
+            android:id="@+id/dif_button"
+            android:enabled="false">
         </Button>
         <Button
             android:layout_height="wrap_content"
@@ -58,7 +60,8 @@
             android:layout_weight="1"
             android:text="*"
             android:textSize="8pt"
-            android:id="@+id/multiply_button">
+            android:id="@+id/multiply_button"
+            android:enabled="false">
         </Button>
         <Button
             android:layout_height="wrap_content"
@@ -66,7 +69,8 @@
             android:layout_weight="1"
             android:text="/"
             android:textSize="8pt"
-            android:id="@+id/devide_button">
+            android:id="@+id/devide_button"
+            android:enabled="false">
         </Button>
     </LinearLayout>
     <TextView
